# Axum-Web-Server

./: Cargo.toml  LICENSE  README.md
examples/: anyhow.rs  reqwest.rs
src/: main.rs
tests/: http_client.rs
