[package]
name = "axum_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = [] }
axum = "0.7.4"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
